<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:layout_below="@+id/imgLogo"
    android:background="#A9A9A9"
    tools:context=".CurrencyConverterMainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:layout_marginTop="20dip"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/caller"
        android:textSize="50sp" 
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/type_city_to_call"
        android:textSize="25sp" 
        android:textStyle="bold"/>
    
   
       <AutoCompleteTextView
      android:id="@+id/autoCompleteTextView1"
         android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#660000"
        android:textStyle="bold"
        android:background="#F0FFFF" 
        android:gravity="center_horizontal" 
        android:orientation="horizontal" 
        android:inputType="textNoSuggestions">

      <requestFocus />
   </AutoCompleteTextView>
   
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:gravity="center" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/phone"
        android:textSize="25sp" 
        android:textStyle="bold"/>
    
    <EditText android:id="@+id/phone"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="28sp"
        android:textColor="#660000"
        android:textStyle="bold"
        android:background="#F0FFFF" 
        android:gravity="center_horizontal" 
        android:orientation="horizontal"
        android:inputType="number"
        
       />
  

    <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dip"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
    
    <Button
        android:id="@+id/call" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textSize="32sp"
        android:textColor="#800000"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/call"
        />
    
    <Button
        android:id="@+id/clear" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textSize="32sp"
        android:textColor="#800000"
        android:layout_gravity="center_horizontal"
        android:text="@string/clear"
        />
    </TableRow>
        <Button
        android:id="@+id/exit" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/exit" 
        android:onClick="sendMessage" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" />
</LinearLayout>